# OpenAIDemo

./: .gitignore  README.md  pyproject.toml
Basic API Call/: helloOpenAI.py
Text/: classification.txt  sentiment_analyser.py
Text Examples/: chatbot.py  classification.py  code_explain.txt  companies.txt  explain_code.py  in_context_learning.py  multipleresponses.py  sentiment_analyser.py
Text Moderation/: textmoderation.py
src/openaidemo/: __init__.py
